--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav_link nav navbar-right">
         <li><%= link_to t(".home"), root_path %></li>
         <li><%= link_to t(".help"), help_path %></li>
-        <li><%= link_to t(".login"), "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to t(".users"), '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t ".account" %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".profile"), current_user , class: "dropdown-item" %></li>
+              <li><%= link_to t(".settings"), '#', class: "dropdown-item" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".logout"), logout_path, method: :delete , class: "dropdown-item" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t(".login"), login_path %></li>
+        <% end %>
         <li><%= link_to "English", locale: "en" %></li>
         <li><%= link_to "Vietnamese", locale: "vi" %></li>
       </ul>
