--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,30 +3,6 @@
 
 <div class="row justify-content-center">
   <div class="col-md-6">
-    <%= form_for(@user) do |f| %>
-      <%= render "shared/error_messages" %>
-
-      <div class="form-group">
-        <%= f.label :name %>
-      	<%= f.text_field :name, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-      	<%= f.label :email %>
-      	<%= f.email_field :email, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-      	<%= f.label :password %>
-      	<%= f.password_field :password, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-      	<%= f.label :password_confirmation, "Confirmation" %>
-      	<%= f.password_field :password_confirmation, class: "form-control" %>
-      </div>
-
-      <%= f.submit t(".create"), class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form" %>
   </div>
 </div>
