--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
-<% provide :title, "Contact" %>
-<h1 class="mb-40">Contact</h1>
+<% provide :title, t(".title") %>
+<h1 class="mb-40"><%= t ".contact" %></h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/#contact">contact page</a>.
+  <%= t ".text-contact1" %>
+  <a href="http://www.railstutorial.org/#contact"><%= t ".text-contact2" %></a>.
 </p>
