--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,10 @@
-<% provide :title, "About" %>
-<h1 class="mb-40">About</h1>
+<% provide :title, t(".title") %>
+<h1 class="mb-40"><%= t ".about" %></h1>
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  <%= t ".text-about1" %> <a href="http://www.railstutorial.org/"><em><%= t ".text-about2" %></em></a> <%= t ".text-about3" %>
+  <a href="http://www.railstutorial.org/book"><%= t ".text-about4" %></a> <%= t ".text-about5" %>
+  <a href="http://screencasts.railstutorial.org/"><%= t ".text-about6" %></a>
+ <%= t ".text-about7" %>
+  <a href="http://rubyonrails.org/"><%= t ".text-about8" %></a>.
+  <%= t ".text-about9" %>
 </p>
