--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,8 @@
-<% provide :title, "Help" %>
-<h1 class="mb-40">Help</h1>
+<% provide :title, t(".title") %>
+<h1 class="mb-40"><%= t ".help" %></h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+  <%= t ".text-help1" %>
+  <a href="http://www.railstutorial.org/#help"><%= t ".text-help2" %></a>.
+  <%= t ".text-help3" %>
+  <a href="http://www.railstutorial.org/book"><em><%= t ".text-help4" %></em></a>.
 </p>
