--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
-<% provide :title, "Sign up" %>
-<h1 class="mb-40">Sign up</h1>
-<p>This will be a signup page for new users.</p>
+<% provide :title, t(".title") %>
+
+<h1 class="mb-40"><%= t ".signup" %></h1>
+<p><%= t ".welcome" %></p>
